test-app/kuber-test/hello-service.yaml
kind: Service 
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - port: 5000
